Allow setting host using env variable

--- a/custom.conf
+++ b/custom.conf
@@ -3,7 +3,7 @@ include classpath("application.conf")
 node-address {
     protocol = http
     host = "*"
-    host = {?SQS_LOCAL_HOST}
+    host = ${?SQS_LOCAL_HOST}
     port = 9324
     context-path = ""
 }
